--- a/TreeTraversals.vcxproj
+++ b/TreeTraversals.vcxproj
@@ -139,12 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="inorderFunctions.cpp" />
+    <ClCompile Include="Traversals.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Tree.cpp" />
+    <ClCompile Include="BST.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Tree.h" />
+    <ClInclude Include="BST.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
